--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li class=""><a class="hover:text-red-600" href="#">Home</a></li>
             <li><a class="hover:text-red-600 " href="#">New</a></li>
             <li><a class="hover:text-red-600" href="#">Popular</a></li>
-            <li><a class="hover:text-red-600" href="#">Popular</a></li>
+            <li><a class="hover:text-red-600" href="#">Trending</a></li>
             <li><a class="hover:text-red-600" href="#">Categories</a></li>
           </ul>
         </div>
