--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;800&display=swap" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css" />
-  <title>News Blog</title>
+  <!-- Primary Meta Tags -->
+  <title>News Blog | Pages | Frontend Mentor</title>
+  <meta name="title" content="News Blog | Pages | Frontend Mentor">
+  <meta name="description" content="98% Powered by Tailwind CSS. Tried to avoid javascript but I just can't 😂">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://anazanoiar69.github.io/news-blog/">
+  <meta property="og:title" content="News Blog | Pages | Frontend Mentor">
+  <meta property="og:description" content="98% Powered by Tailwind CSS. Tried to avoid javascript but I just can't 😂">
+  <meta property="og:image" content="./screenshot.png">
 </head>
 
 <body class="bg-zinc-50">
@@ -90,7 +100,8 @@
       </section>
     </div>
     <section class="lg:col-span-3 lg:bg-zinc-200 lg:my-8">
-      <ul class="flex justify-center flex-wrap lg:flex-nowrap py-12 px-8 xl:py-8 space-y-12 lg:space-y-0 lg:space-x-8 lg:px-6 container mx-auto">
+      <ul
+        class="flex justify-center flex-wrap lg:flex-nowrap py-12 px-8 xl:py-8 space-y-12 lg:space-y-0 lg:space-x-8 lg:px-6 container mx-auto">
         <li>
           <div class="grid grid-cols-3 space-x-5">
             <div class="col-1">
